# ocr_cli

./: .gitignore  README.md  pyproject.toml
ocr_cli/: main.py
